fix: increase z-index for FlyModal

--- a/src/components/overlays/FlyModal/FlyModal.sass
+++ b/src/components/overlays/FlyModal/FlyModal.sass
@@ -12,7 +12,7 @@
 	background: rgba($gray-dark, .85)
 	animation: fadeIn .2s ease 0s
 	font-weight: 300
-	z-index: 9
+	z-index: 10
 
 .FlyModal
 	width: 600px
